# valacme

./: LICENSE  README  meson.build
data/: app.desktop.in.in  gresource.xml.in
src/: column.vala  command_manager.vala  editcommand.vala  filehandler.vala  main.vala  meson.build  plumber.vala  search.vala  textview.vala  textwidget.vala  theme_manager.vala  ui_helper.vala  window.vala
